# raytrace

./: CMakeLists.txt
src/: main.cpp
src/img/: ppm.cpp  ppm.hpp  ray.hpp  rgb_pixel.cpp  rgb_pixel.hpp
src/utility/: color.hpp  vec3.hpp
test/: color_test.cpp  ppm_test.cpp  ray_test.cpp  vec3_test.cpp
